--- a/Ward.API/Properties/launchSettings.json
+++ b/Ward.API/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:9287;http://localhost:5066"
+      "applicationUrl": "https://localhost:9287"
     },
     "IIS Express": {
       "commandName": "IISExpress",
